Fixed spacing on skills

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4507,6 +4507,18 @@ input, select, textarea {
 		opacity: 1;
 	}
 
+	.skills-text-1 {
+		color: #c8ece9;
+		font-size: 20px;
+	}
+	.indivskills{
+		font-size: 40px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin-left: 20px;
+		width: 220px;
+	}
 /* CTA */
 
 	#cta .inner {
